lightgbm example minor revisions

--- a/lightgbm-byo/lightgbm-byo.ipynb
+++ b/lightgbm-byo/lightgbm-byo.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "In this notebook we'll examine how to BYO container in Amazon SageMaker.  This is an option for algorithms and frameworks not directly supported in Amazon SageMaker as either (1) built-in algorithms, or (2) prebuilt Amazon SageMaker containers (such as the ones for TensorFlow, PyTorch, Apache MXNet, Scikit-learn, and XGBoost).  As an example, we'll containerize the popular lightGBM gradient boosting framework, which is not supported off-the-shelf in Amazon SageMaker, and apply it to a public dataset from UCI's Machine Learning Repository.  The dataset, which relates to predicting purchase intent by online shoppers, is at https://archive.ics.uci.edu/ml/datasets/Online+Shoppers+Purchasing+Intention+Dataset.  \n",
     "\n",
-    "We'll perform the following steps:\n",
+    "Besides BYO container, we'll also employ the following features:  SageMaker Processing for data preprocessing, SageMaker hosted training, SageMaker Processing for model evaluation/batch scoring, and endpoints for real time inference.  More specifically, we'll perform the following steps:\n",
     "\n",
     "- Obtain the dataset.\n",
     "- Build a Docker image for lightGBM to be run as a container in SageMaker Processing.\n",
@@ -17,6 +17,8 @@
     "- Train a lightGBM model with that separate Docker image in SageMaker hosted training.\n",
     "- Evaluate the model / do batch scoring in SageMaker Processing with the same container used for preprocessing.\n",
     "- Deploy the model to a real time SageMaker endpoint using Ezsmdeploy, a Python package that provides many conveniences and automation.\n",
+    "\n",
+    "**PREREQUISITES:**  Be sure to run this notebook on an instance or machine that supports Docker, with AWS IAM permissions to Amazon S3 and Amazon SageMaker (full access to both is fine for learning purposes).  In the notebook below we'll also add access to Amazon ECR.\n",
     "\n",
     "\n",
     "## Setup and obtain dataset\n",
@@ -30,6 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "\n",
     "import boto3\n",
     "import sys\n",
     "import sagemaker\n",
@@ -39,6 +43,26 @@
     "session = sagemaker.Session()\n",
     "s3_output = session.default_bucket()\n",
     "s3_prefix = 'lightGBM-BYO'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before we move on, let's add access via AWS IAM to Amazon ECR, the AWS Docker repository.  Later in this notebook we'll create Docker repositories in ECR and push Docker images to them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iam = boto3.client('iam')\n",
+    "iam.attach_role_policy(\n",
+    "    PolicyArn='arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryFullAccess',\n",
+    "    RoleName=role.split(\"service-role/\",1)[1]\n",
+    ")"
    ]
   },
   {
@@ -569,7 +593,8 @@
     "                      role=role,\n",
     "                      train_instance_count=1,\n",
     "                      train_instance_type='local',\n",
-    "                      hyperparameters=hyperparameters)\n",
+    "                      hyperparameters=hyperparameters,\n",
+    "                      base_job_name='lightgbm-byo',)\n",
     "\n",
     "estimator.fit({'train': preprocessed_training_data})"
    ]
@@ -703,7 +728,7 @@
     "- a preexisting model that you trained outside Amazon SageMaker, or\n",
     "- trained within Amazon SageMaker but is simply an ordinary artifact, and has not yet been wrapped in a SageMaker Model object.  This is the case if you train models within SageMaker Processing.\n",
     "\n",
-    "First we need to install Ezsmdeploy."
+    "First we need to install Ezsmdeploy.  We'll also install lightGBM so we can test locally."
    ]
   },
   {
@@ -712,7 +737,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!{sys.executable} -m pip install ezsmdeploy"
+    "!{sys.executable} -m pip install ezsmdeploy lightgbm"
    ]
   },
   {
@@ -773,7 +798,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can test the `modelscript_lightgbm.py` script locally to make sure it is working correctly.  The output should be an array of floats representing prediction probabilities."
+    "We can test the `modelscript_lightgbm.py` script locally to make sure it is working correctly.  The output should be an array of floats representing prediction probabilities.  (The closer the number is to one, the more likely a purchase will be made.)"
    ]
   },
   {
