lightgbm example add validation channel

--- a/lightgbm-byo/lightgbm-byo.ipynb
+++ b/lightgbm-byo/lightgbm-byo.ipynb
@@ -480,23 +480,36 @@
     "    # extract training data S3 location and hyperparameter values\n",
     "    parser = argparse.ArgumentParser()\n",
     "    parser.add_argument('--train', type=str, default=os.environ['SM_CHANNEL_TRAIN'])\n",
+    "    parser.add_argument('--validation', type=str, default=os.environ['SM_CHANNEL_VALIDATION'])\n",
     "    parser.add_argument('--num_leaves', type=int, default=28)\n",
     "    parser.add_argument('--max_depth', type=int, default=5)\n",
     "    parser.add_argument('--learning_rate', type=float, default=0.1)\n",
     "    args = parser.parse_args()\n",
     "    \n",
-    "    print('Loading data from {}\\n'.format(args.train))\n",
+    "    print('Loading training data from {}\\n'.format(args.train))\n",
     "    input_files = glob.glob('{}/*.npy'.format(args.train))\n",
-    "    print('\\nINPUT FILE LIST: \\n{}\\n'.format(input_files)) \n",
+    "    print('\\nTRAINING INPUT FILE LIST: \\n{}\\n'.format(input_files)) \n",
     "    for file in input_files:\n",
     "        if 'x_' in file:\n",
     "            x_train = np.load(file)\n",
     "        else:\n",
-    "            y_train = np.load(file)\n",
-    "            \n",
+    "            y_train = np.load(file)      \n",
     "    print('\\nx_train shape: \\n{}\\n'.format(x_train.shape))\n",
     "    print('\\ny_train shape: \\n{}\\n'.format(y_train.shape))\n",
     "    train_data = lgb.Dataset(x_train, label=y_train)\n",
+    "    \n",
+    "    print('Loading validation data from {}\\n'.format(args.validation))\n",
+    "    eval_input_files = glob.glob('{}/*.npy'.format(args.validation))\n",
+    "    print('\\nVALIDATION INPUT FILE LIST: \\n{}\\n'.format(eval_input_files)) \n",
+    "    for file in eval_input_files:\n",
+    "        if 'x_' in file:\n",
+    "            x_val = np.load(file)\n",
+    "        else:\n",
+    "            y_val = np.load(file)      \n",
+    "    print('\\nx_val shape: \\n{}\\n'.format(x_val.shape))\n",
+    "    print('\\ny_val shape: \\n{}\\n'.format(y_val.shape))\n",
+    "    eval_data = lgb.Dataset(x_val, label=y_val)\n",
+    "    \n",
     "    print('Training model with hyperparameters:\\n\\t num_leaves: {}\\n\\t max_depth: {}\\n\\t learning_rate: {}\\n'\n",
     "          .format(args.num_leaves, args.max_depth, args.learning_rate))\n",
     "    parameters = {\n",
@@ -507,11 +520,10 @@
     "        'num_leaves': args.num_leaves,\n",
     "        'max_depth': args.max_depth,\n",
     "        'learning_rate': args.learning_rate,\n",
-    "        'verbose': 1,\n",
-    "        'is_training_metric': True\n",
+    "        'verbose': 1\n",
     "    }\n",
     "    num_round = 10\n",
-    "    bst = lgb.train(parameters, train_data, num_round)\n",
+    "    bst = lgb.train(parameters, train_data, num_round, eval_data, verbose_eval=1)\n",
     "    \n",
     "    print('Saving model . . . .')\n",
     "    bst.save_model('/opt/ml/model/online_shoppers_model.txt')"
@@ -596,7 +608,7 @@
     "                      hyperparameters=hyperparameters,\n",
     "                      base_job_name='lightgbm-byo',)\n",
     "\n",
-    "estimator.fit({'train': preprocessed_training_data})"
+    "estimator.fit({'train': preprocessed_training_data, 'validation': preprocessed_test_data})"
    ]
   },
   {
