update tf 2 complete workflow example to tf 2.2

--- a/tf-2-workflow/tf-2-workflow.ipynb
+++ b/tf-2-workflow/tf-2-workflow.ipynb
@@ -262,8 +262,8 @@
     "                             hyperparameters=hyperparameters,\n",
     "                             role=sagemaker.get_execution_role(),\n",
     "                             base_job_name='tf-2-workflow',\n",
-    "                             framework_version='2.1',\n",
-    "                             py_version='py3',\n",
+    "                             framework_version='2.2',\n",
+    "                             py_version='py37',\n",
     "                             script_mode=True)"
    ]
   },
@@ -296,6 +296,22 @@
     "\n",
     "More specifically, the Estimator object from the Local Mode training job can be used to deploy a model locally. With one exception, this code is the same as the code you would use to deploy to production. In particular, all you need to do is invoke the local Estimator's deploy method, and similarly to Local Mode training, specify the instance type as either `local_gpu` or `local` depending on whether your notebook is on a GPU instance or CPU instance.  \n",
     "\n",
+    "Just in case there are other inference containers running in Local Mode, we'll stop them to avoid conflict before deploying our new model locally."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker container stop $(docker container ls -aq) >/dev/null"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The following single line of code deploys the model locally in the SageMaker TensorFlow Serving container:  "
    ]
   },
@@ -422,8 +438,8 @@
     "                       hyperparameters=hyperparameters,\n",
     "                       role=sagemaker.get_execution_role(),\n",
     "                       base_job_name='tf-2-workflow',\n",
-    "                       framework_version='2.1',\n",
-    "                       py_version='py3',\n",
+    "                       framework_version='2.2',\n",
+    "                       py_version='py37',\n",
     "                       script_mode=True)"
    ]
   },
@@ -1009,7 +1025,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
