fix redundant output and missing variable

--- a/lightgbm-byo/lightgbm-byo.ipynb
+++ b/lightgbm-byo/lightgbm-byo.ipynb
@@ -1372,6 +1372,13 @@
    "outputs": [],
    "source": [
     "import requests\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "# Load data and ground truth from Test split\n",
+    "x_test = np.load('./x_test.npy')\n",
+    "y_test = np.load('./y_test.npy')\n",
+    "\n",
+    "# Create inference request to model deployed locally\n",
     "url = 'http://172.18.0.2:8080/invocations' # IP address of serving container when deployed locally\n",
     "payload = x_test.tobytes()\n",
     "headers = {'content-type':'application/x-npy','accept': 'application/x-npy'}\n",
@@ -1414,7 +1421,7 @@
     "lgbm_model = Model(model_data=model_artifact,\n",
     "                   role=role,\n",
     "                   image_uri=inference_repository_uri,\n",
-    "                   name='lightgbm-byo-deployment-4')\n",
+    "                   name='lightgbm-byo-deployment')\n",
     "\n",
     "lgbm_model.deploy(initial_instance_count=1, instance_type='ml.c5.xlarge', wait=True)"
    ]
@@ -1459,18 +1466,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:sagemaker:Deleting endpoint configuration with name: lightgbm-byo-deployment-4-2020-10-01-19-33-14-203\n",
-      "INFO:sagemaker:Deleting endpoint with name: lightgbm-byo-deployment-4-2020-10-01-19-33-14-203\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "predictor.delete_endpoint()"
    ]
