Cleaning up endpoint names and adding context on IAM role.

--- a/deploy-pretrained-model/GPT2/Deploy_GPT2.ipynb
+++ b/deploy-pretrained-model/GPT2/Deploy_GPT2.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "## Deploy Model\n",
     "\n",
-    "Now that we have our deployment package, we can use the [SageMaker SDK](https://sagemaker.readthedocs.io/en/stable/index.html) to deploy our API endpoint with two lines of code. We need to specify an IAM role for the SageMaker endpoint to use. Minimally, it will need read access to the default SageMaker bucket (usually named sagemaker-{region}-{your account number}) so it can read the deployment package. When we call deploy(), the SDK will save our deployment archive to S3 for the SageMaker endpoint to use. We will use the helper function [get_execution_role](https://sagemaker.readthedocs.io/en/stable/api/utility/session.html?highlight=get_execution_role#sagemaker.session.get_execution_role) to retrieve our current IAM role so we can pass it to the SageMaker endpoint. \n",
+    "Now that we have our deployment package, we can use the [SageMaker SDK](https://sagemaker.readthedocs.io/en/stable/index.html) to deploy our API endpoint with two lines of code. We need to specify an IAM role for the SageMaker endpoint to use. Minimally, it will need read access to the default SageMaker bucket (usually named sagemaker-{region}-{your account number}) so it can read the deployment package. When we call deploy(), the SDK will save our deployment archive to S3 for the SageMaker endpoint to use. We will use the helper function [get_execution_role](https://sagemaker.readthedocs.io/en/stable/api/utility/session.html?highlight=get_execution_role#sagemaker.session.get_execution_role) to retrieve our current IAM role so we can pass it to the SageMaker endpoint. You may specify another IAM role here. Minimally it will require read access to the model artifacts in S3 and the [ECR repository](https://github.com/aws/deep-learning-containers/blob/master/available_images.md) where the container image is stored by AWS.\n",
     "\n",
     "You may notice that we specify our PyTorch version and Python version when creating the PyTorchModel object. The SageMaker SDK uses these parameters to determine which PyTorch container to use. \n",
     "\n",
@@ -121,7 +121,7 @@
     "from sagemaker.pytorch import PyTorchModel\n",
     "from sagemaker import get_execution_role\n",
     "\n",
-    "endpoint_name = 'GPT2-11-3-test'\n",
+    "endpoint_name = 'GPT2'\n",
     "\n",
     "model = PyTorchModel(entry_point='inference_code.py', \n",
     "                     model_data=zipped_model_path, \n",
