TF2 workflow SM SDK v2 mods

--- a/tf-2-workflow/tf-2-workflow.ipynb
+++ b/tf-2-workflow/tf-2-workflow.ipynb
@@ -23,6 +23,9 @@
     "    6. [Cleanup](#Cleanup)\n",
     "9. [Extensions](#Extensions)\n",
     "\n",
+    "\n",
+    "### ***Prerequisite:  To run the Local Mode sections of this example, use a SageMaker Notebook Instance; otherwise skip those sections (for example if you're using SageMaker Studio instead).***\n",
+    "\n",
     "    \n",
     "## Introduction <a class=\"anchor\" id=\"Introduction\">\n",
     "\n",
@@ -257,8 +260,8 @@
     "                             source_dir='tf-2-workflow/train_model',\n",
     "                             entry_point='train.py',\n",
     "                             model_dir=model_dir,\n",
-    "                             train_instance_type=train_instance_type,\n",
-    "                             train_instance_count=1,\n",
+    "                             instance_type=train_instance_type,\n",
+    "                             instance_count=1,\n",
     "                             hyperparameters=hyperparameters,\n",
     "                             role=sagemaker.get_execution_role(),\n",
     "                             base_job_name='tf-2-workflow',\n",
@@ -429,12 +432,15 @@
     "train_instance_type = 'ml.c5.xlarge'\n",
     "hyperparameters = {'epochs': 30, 'batch_size': 128, 'learning_rate': 0.01}\n",
     "\n",
+    "git_config = {'repo': 'https://github.com/aws-samples/amazon-sagemaker-script-mode', \n",
+    "              'branch': 'master'}\n",
+    "\n",
     "estimator = TensorFlow(git_config=git_config,\n",
     "                       source_dir='tf-2-workflow/train_model',\n",
     "                       entry_point='train.py',\n",
     "                       model_dir=model_dir,\n",
-    "                       train_instance_type=train_instance_type,\n",
-    "                       train_instance_count=1,\n",
+    "                       instance_type=train_instance_type,\n",
+    "                       instance_count=1,\n",
     "                       hyperparameters=hyperparameters,\n",
     "                       role=sagemaker.get_execution_role(),\n",
     "                       base_job_name='tf-2-workflow',\n",
@@ -644,7 +650,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sess.delete_endpoint(tuning_predictor.endpoint)"
+    "sess.delete_endpoint(tuning_predictor.endpoint_name)"
    ]
   },
   {
