--- a/tf-2-workflow-smpipelines/tf-2-workflow-smpipelines.ipynb
+++ b/tf-2-workflow-smpipelines/tf-2-workflow-smpipelines.ipynb
@@ -37,7 +37,24 @@
     "\n",
     "To enable you to run this notebook within a reasonable time (typically less than an hour), this notebook's use case is a straightforward regression task:  predicting house prices based on the well-known Boston Housing dataset. This public dataset contains 13 features regarding housing stock of towns in the Boston area.  Features include average number of rooms, accessibility to radial highways, adjacency to a major river, etc.  \n",
     "\n",
-    "To begin, we'll import some necessary packages and set up directories for local training and test data.  We'll also set up a SageMaker Session to perform various operations, and specify an Amazon S3 bucket to hold input data and output.  The default bucket used here is created by SageMaker if it doesn't already exist, and named in accordance with the AWS account ID and AWS Region.  "
+    "To begin, we'll update the version of the high level SageMaker Python SDK, which usually is the most convenient way to interface with SageMaker from code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "!{sys.executable} -m pip install sagemaker --quiet --upgrade"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we'll import some necessary packages and set up directories for local training and test data.  We'll also set up a SageMaker Session to perform various operations, and specify an Amazon S3 bucket to hold input data and output.  The default bucket used here is created by SageMaker if it doesn't already exist, and named in accordance with the AWS account ID and AWS Region.  "
    ]
   },
   {
@@ -438,9 +455,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're now ready to set up an Estimator object for SageMaker hosted training. It is similar to a SageMaker Local Mode Estimator, except the `train_instance_type` has been set to a SageMaker ML instance type instead of `local` for Local Mode, in this case a `c5` compute optimized instance type.  The Git configuration passed into the Estimator pulls the training script from a Git repository and ensures that the team is sharing the same source controlled code instead of having different scripts scattered on various team members' machines. \n",
+    "We're now ready to set up an Estimator object for SageMaker hosted training. It is similar to a SageMaker Local Mode Estimator, except the `train_instance_type` has been set to a SageMaker ML instance type instead of `local` for Local Mode, in this case a `c5` compute optimized instance type.  Other Estimator parameters of note:\n",
     "\n",
-    "Hyperparameters are passed in as a dictionary with a longer number of epochs than the number used in a project's prototyping phase.  For hosted training initiated after prototyping is complete, you can train the model for a larger number of epochs with the expectation that model training likely will proceed without code-related errors and will converge to an improved, lower validation loss."
+    "- The Git configuration passed into the Estimator pulls the training script from a Git repository and ensures that the team is sharing the same source controlled code instead of having different scripts scattered on various team members' machines. \n",
+    "\n",
+    "- Training metrics can be captured from the training job.  Any metrics logged by the code and container can be specified using a regular expression such as the ones shown below.  Captured metrics are sent to the Amazon CloudWatch monitoring service where they can be reviewed, graphed, etc.\n",
+    "\n",
+    "- Hyperparameters are passed in as a dictionary with a longer number of epochs than the number used in a project's prototyping phase.  For hosted training initiated after prototyping is complete, you can train the model for a larger number of epochs with the expectation that model training likely will proceed without code-related errors and will converge to an improved, lower validation loss."
    ]
   },
   {
@@ -457,8 +478,20 @@
     "git_config = {'repo': 'https://github.com/aws-samples/amazon-sagemaker-script-mode', \n",
     "              'branch': 'master'}\n",
     "\n",
+    "training_metrics = [\n",
+    "   {\n",
+    "        \"Name\": \"training:loss\",\n",
+    "        \"Regex\": \".*step - loss: ([0-9\\\\.]+) - val_loss: [0-9\\\\.]+ - batch: [0-9\\\\.]+.*\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"Name\": \"validation:loss\",\n",
+    "        \"Regex\": \".*step - loss: [0-9\\\\.]+ - val_loss: ([0-9\\\\.]+) - batch: [0-9\\\\.]+.*\",\n",
+    "    }\n",
+    "]\n",
+    "\n",
     "hosted_estimator = TensorFlow(\n",
     "                       git_config=git_config,\n",
+    "                       metric_definitions=training_metrics,\n",
     "                       source_dir='tf-2-workflow-smpipelines/train_model',\n",
     "                       entry_point='train.py',\n",
     "                       instance_type=train_instance_type,\n",
@@ -827,6 +860,7 @@
     "estimator = TensorFlow(\n",
     "    image_uri=image_uri_train,\n",
     "    git_config=git_config,\n",
+    "    metric_definitions=training_metrics,\n",
     "    source_dir='tf-2-workflow-smpipelines/train_model',\n",
     "    entry_point='train.py',\n",
     "    instance_type=training_instance_type,\n",
@@ -996,7 +1030,7 @@
    "source": [
     "### Creating and executing the pipeline <a class=\"anchor\" id=\"CreatingExecutingPipeline\">\n",
     "\n",
-    "With all of the pipeline steps now defined, we can define the pipeline itself as a `Pipeline` object comprising a series of those steps.  Parallel and conditional steps also are possible."
+    "With all of the pipeline steps now defined, we can define the pipeline itself as a `Pipeline` object comprising a series of those steps.  Parallel and conditional steps also are possible.  The pipeline's directed acyclic graph (DAG) structure is inferred from the specified inputs and outputs, there is no need to explicitly specify the DAG or whether steps are parallel or in series."
    ]
   },
   {
@@ -1005,7 +1039,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sagemaker.workflow.pipeline import Pipeline\n",
+    "from sagemaker.workflow.pipeline import Pipeline, PipelineExperimentConfig\n",
+    "from sagemaker.workflow.execution_variables import ExecutionVariables\n",
     "\n",
     "pipeline = Pipeline(\n",
     "    name=f\"TF2Workflow\",\n",
@@ -1024,6 +1059,7 @@
     "           step_create_model,\n",
     "           step_batch\n",
     "          ],\n",
+    "    pipeline_experiment_config=PipelineExperimentConfig(\"TF2WorkflowExperiment\", ExecutionVariables.PIPELINE_EXECUTION_ID),\n",
     "    sagemaker_session=sess )"
    ]
   },
@@ -1031,6 +1067,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The pipeline also is integrated with SageMaker Experiments, which lets you organize, track, compare, and evaluate ML experiments.  In this use case, we can use SageMaker Experiments to compare results from different executions of the pipeline, such as variations in the training metrics we specified above.  You can view the experiment in SageMaker Studio by clicking the tilted triangle icon in the left toolbar, selecting **Experiments and trials** from the drop down menu, and clicking on the experiment name, `TF2WorkflowExperiment`.  Alternatively, you can view the results with the SageMaker Experiments SDK.\n",
+    "\n",
     "We can inspect the pipeline definition in JSON format:"
    ]
   },
@@ -1156,9 +1194,9 @@
  "metadata": {
   "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python 3 (TensorFlow 2.3 Python 3.7 CPU Optimized)",
+   "display_name": "conda_tensorflow2_p36",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-west-2:236514542706:image/tensorflow-2.3-cpu-py37-ubuntu18.04-v1"
+   "name": "conda_tensorflow2_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1170,7 +1208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
