job tagging code added

--- a/tf-2-workflow-smpipelines/tf-2-workflow-smpipelines.ipynb
+++ b/tf-2-workflow-smpipelines/tf-2-workflow-smpipelines.ipynb
@@ -181,10 +181,13 @@
     "from sagemaker import get_execution_role\n",
     "from sagemaker.sklearn.processing import SKLearnProcessor\n",
     "\n",
+    "processing_tags = [{'Key': 'cost-center', 'Value': 'TF2WorkflowProcessing'}]\n",
+    "\n",
     "sklearn_processor1 = SKLearnProcessor(framework_version='0.23-1',\n",
     "                                     role=get_execution_role(),\n",
     "                                     instance_type='ml.m5.xlarge',\n",
-    "                                     instance_count=2)"
+    "                                     instance_count=2,\n",
+    "                                     tags=processing_tags)"
    ]
   },
   {
@@ -457,11 +460,13 @@
    "source": [
     "We're now ready to set up an Estimator object for SageMaker hosted training. It is similar to a SageMaker Local Mode Estimator, except the `train_instance_type` has been set to a SageMaker ML instance type instead of `local` for Local Mode, in this case a `c5` compute optimized instance type.  Other Estimator parameters of note:\n",
     "\n",
-    "- The Git configuration passed into the Estimator pulls the training script from a Git repository and ensures that the team is sharing the same source controlled code instead of having different scripts scattered on various team members' machines. \n",
+    "- **Git configuration**:  pulls the training script from a Git repository and ensures that the team is sharing the same source controlled code instead of having different scripts scattered on various team members' machines. \n",
     "\n",
-    "- Training metrics can be captured from the training job.  Any metrics logged by the code and container can be specified using a regular expression such as the ones shown below.  Captured metrics are sent to the Amazon CloudWatch monitoring service where they can be reviewed, graphed, etc.\n",
+    "- **Training metrics**: can be captured from the training job.  Any metrics logged by the code and container can be specified using a regular expression such as the ones shown below.  Captured metrics are sent to the Amazon CloudWatch monitoring service where they can be reviewed, graphed, etc.\n",
     "\n",
-    "- Hyperparameters are passed in as a dictionary with a longer number of epochs than the number used in a project's prototyping phase.  For hosted training initiated after prototyping is complete, you can train the model for a larger number of epochs with the expectation that model training likely will proceed without code-related errors and will converge to an improved, lower validation loss."
+    "- **Tags**:  can be assigned to SageMaker Training jobs, SageMaker Processing jobs (see above), and other resources such as SageMaker endpoints (see below) for cost allocation and other purposes.\n",
+    "\n",
+    "- **Hyperparameters**: are passed in as a dictionary with a longer number of epochs than the number used in a project's prototyping phase.  For hosted training initiated after prototyping is complete, you can train the model for a larger number of epochs with the expectation that model training likely will proceed without code-related errors and will converge to an improved, lower validation loss."
    ]
   },
   {
@@ -473,11 +478,8 @@
     "from sagemaker.tensorflow import TensorFlow\n",
     "\n",
     "train_instance_type = 'ml.c5.xlarge'\n",
-    "hyperparameters = {'epochs': 30, 'batch_size': 128, 'learning_rate': 0.01}\n",
-    "\n",
     "git_config = {'repo': 'https://github.com/aws-samples/amazon-sagemaker-script-mode', \n",
     "              'branch': 'master'}\n",
-    "\n",
     "training_metrics = [\n",
     "   {\n",
     "        \"Name\": \"training:loss\",\n",
@@ -488,10 +490,13 @@
     "        \"Regex\": \".*step - loss: [0-9\\\\.]+ - val_loss: ([0-9\\\\.]+) - batch: [0-9\\\\.]+.*\",\n",
     "    }\n",
     "]\n",
+    "training_tags = [{'Key': 'cost-center', 'Value': 'TF2WorkflowTraining'}]\n",
+    "hyperparameters = {'epochs': 30, 'batch_size': 128, 'learning_rate': 0.01}\n",
     "\n",
     "hosted_estimator = TensorFlow(\n",
     "                       git_config=git_config,\n",
     "                       metric_definitions=training_metrics,\n",
+    "                       tags=training_tags,\n",
     "                       source_dir='tf-2-workflow-smpipelines/train_model',\n",
     "                       entry_point='train.py',\n",
     "                       instance_type=train_instance_type,\n",
@@ -585,7 +590,9 @@
     "                       'Regex': ' val_loss: ([0-9\\\\.]+)'}]\n",
     "\n",
     "objective_metric_name = 'val_loss'\n",
-    "objective_type = 'Minimize'"
+    "objective_type = 'Minimize'\n",
+    "\n",
+    "tuning_tags = [{'Key': 'cost-center', 'Value': 'TF2WorkflowTuning'}]"
    ]
   },
   {
@@ -611,7 +618,8 @@
     "                            metric_definitions,\n",
     "                            max_jobs=15,\n",
     "                            max_parallel_jobs=5,\n",
-    "                            objective_type=objective_type)\n",
+    "                            objective_type=objective_type,\n",
+    "                            tags=tuning_tags)\n",
     "\n",
     "tuning_job_name = \"tf-2-workflow-{}\".format(strftime(\"%d-%H-%M-%S\", gmtime()))\n",
     "tuner.fit(inputs, job_name=tuning_job_name)\n",
@@ -670,7 +678,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tuning_predictor = tuner.deploy(initial_instance_count=1, instance_type='ml.m5.xlarge')"
+    "predictor_tags = [{'Key': 'cost-center', 'Value': 'TF2WorkflowEndpoints'}]\n",
+    "tuning_predictor = tuner.deploy(initial_instance_count=1, instance_type='ml.m5.xlarge', tags=predictor_tags)"
    ]
   },
   {
